--- a/blog.html
+++ b/blog.html
@@ -4,13 +4,14 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Blog</title>
+     <!-- <link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css"> -->
+     <title>Blogk1</title>
      <script src="https://kit.fontawesome.com/56e001905f.js" crossorigin="anonymous"></script>
      <link rel="stylesheet" href="blog.css">
 </head>
 <body>
      <nav class="menu">
-          <h1>Madhukar</h1>
+          <h1>Madhu</h1>
           <ul>
                <li><a href="blog.html">Blog</a></li>
                <li><a href="projects.html">Projects</a></li>
