--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
      <nav class="menu">
-          <h1>Madhukar</h1>
+          <h1>Madhu</h1>
           <ul>
                <li><a href="blog.html">Blog</a></li>
                <li><a href="projects.html">Projects</a></li>
