--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 </head>
 <body>
      <nav class="menu">
-          <h1>Madhukar</h1>
+          <h1>Madhu</h1>
           <ul>
                <li><a href="blog.html">Blog</a></li>
                <li><a href="projects.html">Projects</a></li>
@@ -30,7 +30,9 @@
                     <small>20 june, 21</small>
                     <p>A shopping website is build using JavaScript in vscode</p>
                     <a class="b" href="https://maxfit.netlify.app/">live project</a>
-                    <a class="b" href="https://github.com/madhu0501/shopping-project">Source code</a>
+                    <div class="z">
+                    <a class="x" href="https://github.com/madhu0501/shopping-project">Source code</a>
+                    </div>
                </div>
           </li>
           <li class="lis">
@@ -39,7 +41,10 @@
                     <small>14 july, 21</small>
                     <p>This game is build using JavaScript in vs code(IDE)</p>
                     <a class="b" href="https://rock-paperscissor.netlify.app/">live project</a>
-                    <a class="b" href="https://github.com/madhu0501/rock-paper-scissor">Source code</a>
+                    <div class="z">
+                         <a class="b" href="https://github.com/madhu0501/rock-paper-scissor">Source code</a>
+
+                    </div>
                </div>
           </li>
           <li class="lis">
@@ -48,7 +53,10 @@
                     <small>20 july, 21</small>
                     <p>A Basic Calculator is build using tkinker GUI module in python</p>
                     <a class="b" href="https://replit.com/@BandiMadhukar/calculator-1?v=1">live project</a>
-                    <a class="b" href="https://github.com/madhu0501/calculator-and-tik-tac-toe-using-gui">Source code</a>
+                    <div class="z">
+                         <a class="b" href="https://github.com/madhu0501/calculator-and-tik-tac-toe-using-gui">Source code</a>
+                    </div>
+
                </div>
           </li>
           <li class="lis">
@@ -57,7 +65,10 @@
                     <small>25 july, 21</small>
                     <p>Tic-tac-toe game is developed using tkinker GUI module in python</p>
                     <a class="b" href="https://replit.com/@BandiMadhukar/tic-tac-toe?v=1">live project</a>
-                    <a class="b" href="https://github.com/madhu0501/calculator-and-tik-tac-toe-using-gui">Source code</a>
+                    <div class="z">
+                         <a class="b" href="https://github.com/madhu0501/calculator-and-tik-tac-toe-using-gui">Source code</a>
+
+                    </div>
                </div>
           </li>
           <header class="t">
